Fix #5573 "Drop button too narrow in responsive"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-responsive.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-responsive.less
@@ -78,6 +78,18 @@
                     margin-left: 0;
                 }
             }
+
+            .btn-group.dropup {
+                display: flex;
+                width: 100%;
+                margin-left: 0;
+
+                button[class~=btn]:first-of-type {
+                    flex-grow: 1;
+                    text-align: left;
+                    margin-left: 0;
+                }
+            }
         }
     }
 
